# mandelbrot

./: CMakeLists.txt  README.md  build.sh  main.cpp  mandelbrot.cpp
glad/: glad.c  glad.h
shaders/: shader.cpp  shader.frag  shader.h  shader.vert
window/: createWindow.cpp  createWindow.h  window.cpp  window.h
